[package]
name = "check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
hist = { path = "../hist" }
static_rd = { path = "../static_rd" }
dace = { path = "../dace" }
dace_tests = { path = "../dace_tests" }
list_serializable = { path = "../list_serializable" }
serde_json = "1.0.97"
aws_utilities = { path = "../aws_utilities" }
mysql = "24.0.0"
tokio = { version = "1", features = ["full"] }
stack_alg_sim = { path = "../stack_alg_sim" }